apps/production/apps/media/calibre-web-automated/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web-automated
  namespace: media
spec:
  parentRefs:
    - name: home-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - calibre.home.lewelly.com
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: calibre-web-automated
          port: 8083
